--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,8 @@
-# This is a basic workflow to help you get started with Actions
 
 name: CI
 
-# Controls when the action will run. 
+
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
@@ -20,17 +18,25 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # 工作步骤
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      # 检查
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # 初始化环境
+      - name: Initialization environment
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo -E apt-get update
+          sudo mkdir -p /workdir
+
+      # 下载源码
+      - name: Clone source code
+        working-directory: /workdir
+        run: |
+          git clone https://source.codeaurora.org/external/imx/linux-imx -b  v5.4.98 linux-imx
+          git clone https://source.codeaurora.org/external/imx/uboot-imx -b imx_v2020.04_5.4.70_2.3.0 uboot-imx
+          
+      # 压缩源码
+      #- name: uzip source code
+       # run: |
