--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,8 +8,7 @@ on:
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,21 +21,31 @@ jobs:
     steps:
       # 检查
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
 
-      # 初始化环境
-      - name: Initialization environment
+      - name: Space cleanup
         run: |
           sudo -E apt-get update
-          sudo mkdir -p /workdir
 
       # 下载源码
       - name: Clone source code
-        working-directory: /workdir
         run: |
-          git clone https://source.codeaurora.org/external/imx/linux-imx -b  v5.4.98 linux-imx
+     #     git clone https://source.codeaurora.org/external/imx/linux-imx -b  v5.4.98 linux-imx
           git clone https://source.codeaurora.org/external/imx/uboot-imx -b imx_v2020.04_5.4.70_2.3.0 uboot-imx
           
       # 压缩源码
-      #- name: uzip source code
-       # run: |
+      - name: uzip source code
+        run: |
+    #      zip -r linux_imx.zip linux-imx
+          zip -r uboot_imx.zip uboot-imx
+          mkdir file
+     #     cp linux_imx.zip ./file
+          cp uboot_imx.zip ./file
+          cd file
+
+      - name : Upload artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: OpenWrt
+          path: file/
+          
