--- a/.github/workflows/linux_imx.yml
+++ b/.github/workflows/linux_imx.yml
@@ -2,10 +2,10 @@ name: linux_imx
 
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
 
 
 jobs:
