--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,10 +3,10 @@ name: CI
 
 
 on:
-#  push:
-#    branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 
 
@@ -30,7 +30,7 @@ jobs:
       # 下载源码
       - name: Clone source code
         run: 
-          git clone https://source.codeaurora.org/external/imx/uboot-imx -b imx_v2020.04_5.4.70_2.3.0 uboot-imx
+          git clone https://source.codeaurora.org/external/imx/uboot-imx -b imx_v2018.03_4.14.98_2.3.0 uboot-imx
           
       # 压缩源码
       - name: uzip source code
